Added Luiquibase, Spring, Hibernate and other DB dependencies